--- a/vue-project-youtube-clone/frontend/package.json
+++ b/vue-project-youtube-clone/frontend/package.json
@@ -9,8 +9,9 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
-    "core-js": "^3.8.3",
+    "vee-validate": "^3.4.14",
     "vue": "^2.6.14",
+    "vue-image-crop-upload": "^3.0.3",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
