--- a/vue-project-youtube-clone/frontend/.env
+++ b/vue-project-youtube-clone/frontend/.env
@@ -1,2 +1,4 @@
-VUE_APP_URL=http://3.34.46.156:3000
-VUE_APP_API=http://3.34.46.156:3000/api/v1
+VUE_APP_URL=http://43.201.34.85:3000
+VUE_APP_API=http://43.201.34.85:3000/api/v1
+# VUE_APP_URL=http://3.34.46.156:3000
+# VUE_APP_API=http://3.34.46.156:3000/api/v1
