--- a/vue-project-youtube-clone/frontend/package.json
+++ b/vue-project-youtube-clone/frontend/package.json
@@ -12,6 +12,7 @@
     "vee-validate": "^3.4.14",
     "vue": "^2.6.14",
     "vue-image-crop-upload": "^3.0.3",
+    "vue-moment": "^4.1.0",
     "vue-router": "^3.5.1",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
